--- a/index.html
+++ b/index.html
@@ -12,15 +12,24 @@
     </header>
     <div class="container">
       <div class="box-left">
-        <p class="date">August 25, 2024</p>
-        <p class="date">September 7, 2024</p>
-        <p class="date">January 21, 2025</p>
-        <p class="date">August 11, 2025</p>
-        <p class="date">August 12, 2025</p>
-        <p class="date">August 15, 2025</p>
+        <p class="project-date">August 25, 2024</p>
+        <p class="project-date">September 7, 2024</p>
+        <p class="project-date">January 12, 2025</p>
+        <p class="project-date">August 11, 2025</p>
+        <p class="project-date">August 12, 2025</p>
+        <p class="project-date">August 15, 2025</p>
       </div>
-      <div class="box-right"></div>
+      <div class="box-right">
+        <p class="project-name">guess-number-game</p>
+        <p class="project-name">pig-game</p>
+        <p class="project-name">color-flipper</p>
+        <p class="project-name">single-page-cv</p>
+        <p class="project-name">website-project</p>
+        <p class="project-name">changelog</p>
+      </div>
     </div>
-    <button>Visit complete Changelog</button>
+    <div class="button-container">
+      <button>Visit complete Changelog</button>
+    </div>
   </body>
 </html>
