--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Changelog</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <header>
-      <h1>Changelog</h1>
-      <p>Here is a number of projects I have done</p>
+      <h1 id="main-title">Changelog</h1>
+      <p id="main-paragraph">Here is a number of projects I have done</p>
     </header>
-    <div class="container">
-      <div class="box-left">
+    <div id="container">
+      <div id="box-left">
         <p class="project-date">August 25, 2024</p>
         <p class="project-date">September 7, 2024</p>
         <p class="project-date">January 12, 2025</p>
@@ -19,7 +20,7 @@
         <p class="project-date">August 12, 2025</p>
         <p class="project-date">August 15, 2025</p>
       </div>
-      <div class="box-right">
+      <div id="box-right">
         <p class="project-name">guess-number-game</p>
         <p class="project-name">pig-game</p>
         <p class="project-name">color-flipper</p>
@@ -29,7 +30,7 @@
       </div>
     </div>
     <div class="button-container">
-      <button>Visit complete Changelog</button>
+      <button id="btn">Visit complete Changelog</button>
     </div>
   </body>
 </html>
