--- a/index.html
+++ b/index.html
@@ -11,21 +11,29 @@
       <h1 id="main-title">Changelog</h1>
       <p id="main-paragraph">Here is a number of projects I have done</p>
     </header>
-    <div id="container">
-      <div id="box-left">
+    <div id="timeline">
+      <div class="timeline-item">
         <p class="project-date">August 25, 2024</p>
-        <p class="project-date">September 7, 2024</p>
-        <p class="project-date">January 12, 2025</p>
-        <p class="project-date">August 11, 2025</p>
-        <p class="project-date">August 12, 2025</p>
-        <p class="project-date">August 15, 2025</p>
-      </div>
-      <div id="box-right">
         <p class="project-name">guess-number-game</p>
+      </div>
+      <div class="timeline-item">
+        <p class="project-date">September 7, 2024</p>
         <p class="project-name">pig-game</p>
+      </div>
+      <div class="timeline-item">
+        <p class="project-date">January 12, 2025</p>
         <p class="project-name">color-flipper</p>
+      </div>
+      <div class="timeline-item">
+        <p class="project-date">August 11, 2025</p>
         <p class="project-name">single-page-cv</p>
+      </div>
+      <div class="timeline-item">
+        <p class="project-date">August 12, 2025</p>
         <p class="project-name">website-project</p>
+      </div>
+      <div class="timeline-item">
+        <p class="project-date">August 15, 2025</p>
         <p class="project-name">changelog</p>
       </div>
     </div>
