--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="button-container">
-      <button id="btn">Visit complete Changelog</button>
+      <button id="btn">visit complete changelog</button>
     </div>
   </body>
 </html>
